# oasis-engine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/engine/core/: engine.h  input_manager.h  render_manager.h
include/engine/core/base_components/: camera_component.h  geometry_component.h  include_components.h  physics_component.h  transform_component.h
include/engine/core/base_systems/: include_systems.h  physics_system.h  render_system.h
include/engine/core/ecs/: component.h  ecs.h  entity.h  interface.h  system.h
include/engine/interfaces/: irenderable.h
include/engine/math/: matrix.h  vector.h  vertex.h
include/engine/renderer/: camera.h  renderer.h  renderer3d.h
include/engine/window_manager/: window_manager.h
include/example_game/core/: game.h
include/example_game/systems/: include_systems.h  local_player_input.h
lib/engine/core/: engine.cpp  input_manager.cpp  render_manager.cpp
lib/engine/core/base_systems/: physics_system.cpp  render_system.cpp
lib/engine/math/: matrix.cpp  vector.cpp
lib/engine/primitives/: line.cpp  rect.cpp  shader_filter.cpp  triangle.cpp
lib/engine/renderer/: camera.cpp  renderer.cpp  renderer3d.cpp
lib/engine/window_manager/: window_manager.cpp
lib/example_game/core/: game.cpp
src/: main.cpp  old_main.txt  plan.txt  usageref.txt
